# Zelix

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci-pr-nightly.yml  cmake-single-platform.yml  cmake-single-platform.yml.orig
cmake/: fatfs.cmake  freertos.cmake  toolchain-i486-flat.cmake  zelix-target-defaults.cmake
include/zelix/: zlist.h  zwait.h
kernel/: CMakeLists.txt  DEVELOPMENT.md  gdbcmds  main.c
kernel/dev/blk/inc/: ata.h
kernel/dev/blk/src/: ata.c
kernel/fs/: CMakeLists.txt
kernel/fs/fatfs/inc/: fatfs.h  ffconf.h
kernel/fs/fatfs/src/: diskio.c  fatfs.c
kernel/libc/: CMakeLists.txt
kernel/libc/inc/: stdio.h  string.h
kernel/libc/src/: printf.c  putchar.c  string.c
kernel/loader/: CMakeLists.txt
kernel/loader/inc/: elf.h  loader.h
kernel/loader/src/: loader.c
kernel/mm/: CMakeLists.txt
kernel/mm/inc/: gdt.h  heap_alloc.h  mm.h  mmu.h  pmm.h  vmm.h
kernel/mm/src/: gdt.c  heap_alloc.c  mm.c  mmu.c  pmm.c  vmm.c
kernel/sched/: CMakeLists.txt
kernel/sched/inc/: adapter.h
kernel/sched/src/: adapter.c
kernel/syscall/: CMakeLists.txt
kernel/syscall/inc/: syscall.h
kernel/syscall/src/: syscall.c
kernel/task/: CMakeLists.txt
kernel/task/inc/: ktask.h
kernel/task/src/: ktask.c
platform/: CMakeLists.txt
platform/x86/: CMakeLists.txt  linker.ld
platform/x86/inc/: FreeRTOSConfig.h  arch.h  asm_macros.h  i8259.h  idt.h  interrupt.h  io.h  ktask_internal.h  page.h  portmacro.h  task_context.h  tss.h
platform/x86/port/: port.c  portasm.S
platform/x86/src/: console.c  exception.S  gdt.c  i8259.c  idt.c  interrupt.c  page.c  start.S  task_context.c  tss.c
user/: CMakeLists.txt
user/libc/: CMakeLists.txt
user/linker/: CMakeLists.txt
